Adds wrapper for filter-country close button text

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -845,7 +845,9 @@
               </div>
             </div>
 
-            <button class="filter-country__close button button--dark-blue button--rectangular button--mobile-round" type="button">Свернуть</button>
+            <button class="filter-country__close button button--dark-blue button--rectangular button--mobile-round" type="button">
+              <span class="filter-country__close-text">Свернуть</span>
+            </button>
           </div>
         </div>
       </section>
