Deletes unnecessary breaks

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1411,13 +1411,9 @@
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <picture>
-            <source media="(min-width: 1440px)"
-              srcset="img/logo/logo_desktop--blue.png 1x, img/logo/logo_desktop--blue@2x.png 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/logo/logo_tablet--blue.png 1x, img/logo/logo_tablet--blue@2x.png 2x">
-            <img class="logo__image logo__image--blue" src="img/logo/logo_mobile--blue.png"
-              srcset="img/logo/logo_mobile--blue@2x.png 2x" width="96" height="15"
-              alt="Логотип сервиса поиска попутчиков «Погнали»">
+            <source media="(min-width: 1440px)" srcset="img/logo/logo_desktop--blue.png 1x, img/logo/logo_desktop--blue@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/logo/logo_tablet--blue.png 1x, img/logo/logo_tablet--blue@2x.png 2x">
+            <img class="logo__image logo__image--blue" src="img/logo/logo_mobile--blue.png" srcset="img/logo/logo_mobile--blue@2x.png 2x" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
           </picture>
         </a>
 
