Adds .webp images to Tanya’s card

--- a/source/index.html
+++ b/source/index.html
@@ -218,6 +218,8 @@
             <li class="companions__item companion-card">
               <div class="companion-card__avatar-container">
                 <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/avatars/tanya-firsova_tablet.webp 1x, img/avatars/tanya-firsova_tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/avatars/tanya-firsova_mobile.webp 1x, img/avatars/tanya-firsova_mobile@2x.webp 2x">
                   <source media="(min-width: 768px)" srcset="img/avatars/tanya-firsova_tablet.jpg 1x, img/avatars/tanya-firsova_tablet@2x.jpg 2x">
                   <img class="companion-card__avatar" src="img/avatars/tanya-firsova_mobile.jpg" srcset="img/avatars/tanya-firsova_mobile@2x.jpg 2x" width="270" height="270" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
                 </picture>
