Adds wrapper for text in companions section

--- a/source/index.html
+++ b/source/index.html
@@ -215,8 +215,10 @@
         <div class="page-main__wrapper companions__wrapper wrapper">
           <h2 class="page-main__title page-main__title--orange companions__title">Попутчики</h2>
 
-          <p class="companions__text">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, <br class="companions__text-break">а другому маршрут для хайкинга.</p>
-          <p class="companions__text companions__text--bold">Теперь можно легко <br class="companions__text-break">найти единомышленников!</p>
+          <div class="companions__texts">
+            <p class="companions__text">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, <br class="companions__text-break">а другому маршрут для хайкинга.</p>
+            <p class="companions__text companions__text--bold">Теперь можно легко <br class="companions__text-break">найти единомышленников!</p>
+          </div>
 
           <ul class="companions__list">
             <li class="companions__item companion-card">
