Adds level-circle from the svg-sprite

--- a/source/form.html
+++ b/source/form.html
@@ -129,9 +129,8 @@
             <span class="user-profile__badge-text level-badge__number level-badge__number--big">80</span>
             <span class="user-profile__badge-text level-badge__label level-badge__label--big">level</span>
           </p>
-          <svg class="level-badge__level-bar level-bar" width="102" height="102" viewBox="0 0 102 102" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-            <circle class="level-bar__progress" r="48" cx="51" cy="51" fill="transparent" stroke-dasharray="270" stroke-dashoffset="25" stroke="#FF8D30" stroke-width="3" transform="rotate(-90, 50, 50)" stroke-linecap="round">
-            </circle>
+          <svg class="level-badge__level-bar level-bar level-bar--user-profile" width="102" height="102" role="img" aria-hidden="true" focusable="false" stroke-dashoffset="125">
+            <use href="img/icons/icons-sprite.svg#icon-level"></use>
           </svg>
         </div>
 
@@ -558,6 +557,6 @@
 
     <script src="js/global.js"></script>
     <script src="js/pick-country.js"></script>
-    <!-- <script src="js/plans-form.js"></script> -->
+    <script src="js/plans-form.js"></script>
   </body>
 </html>
